# FfmpegVideoEdit

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lc/fve/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CommonUtils.h  FilterVideoScale.cpp  FilterVideoScale.h  JpgVideo.cpp  JpgVideo.h  LCMediaInfo.cpp  LCMediaInfo.h  LCVideoWriter.cpp  LCVideoWriter.h  Merge.cpp  Merge.h  YuvUtils.cpp  YuvUtils.h  native-lib.cpp
app/src/main/cpp/common/: CLog.h
app/src/main/java/com/lc/fve/: FFmpegCmd.java  FFmpegNative.java  MainActivity.java
app/src/main/java/com/lc/fve/utils/: AssetUtils.java  BitmapUtils.java  GlideEngine.java  ImageLoaderUtils.java  StringUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lc/fve/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
